2004-11-11  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/glib-spec.scm (unwrap-value-cg): Whoops, fix parens.

	* gnome/gw/support/defs.scm (type-lookup): Assume that the caller
	owns generated container types (i.e. GList) if 'const isn't set.
	Prevents some invalid frees, hanks to Patrick Bernaud for the
	report.
	
	* gnome/gw/glib-spec.scm (unwrap-value-cg): Use destroy-value-cg
	to free the list after unwrapping.

2004-11-09  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gobject.scm (custom-wrap-decls)
	(wrap-custom-pointer!): New exported macros, designed to simplify
	wrappings of c types represented by native scheme values.

2004-10-28  Andy Wingo  <wingo@pobox.com>

	* defs-checks.ac: Versioned pkg-config check.

	* Makefile.am (all-local): Versioned pkg-config files.

	* examples/main-loop.scm: 
	* examples/example-1.scm: Use guile-gnome-0.

	* bin/guile-gnome.in (localpath): Add /usr/local include dirs to
	the guile loadpath, so that users aren't surprised when they have
	g-wrap installed in /usr/local/guile/site. A hack for guile 1.6.

2004-10-26  Andy Wingo  <wingo@pobox.com>

	* package.ac (GUILE_GLIB_LIBS): Link to the versioned lib.

	* guile-gnome-glib-uninstalled.pc.in, guile-gnome-glib.pc.in: Link
	to the versioned lib.

	* gnome/gobject/config.scm.in: New file, exports
	*guile-gnome-gobject-lib-path*.

	* gnome/gobject/gobject.scm, gtype.scm, gvalue.scm,
	gparameter.scm, gsignal.scm, gclosure.scm: dynamic-link the path
	from (gnome gobject config).

	* gnome/gobject/Makefile.am: Version the libguile-gnome-gobject
	lib. Make config.scm work in the source tree and in the
	installdir. Define GUILE_GOBJECT_DIR to be $guilegnomedir.

	* bin/Makefile.am: New file. Will install a versioned
	guile-gnome-$apiversion into $bindir.

	* bin/guile-gnome.in: New script, wraps guile with a munged load
	path for modules and libraries.

	* Makefile.am (SUBDIRS): Add bin/.

	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
	versioned directory.
